# Zedda

./: .clang-format  .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASING.md  SECURITY.md  THIRD_PARTY_NOTICES.md  ZEDDA_CICD_COMPLETE_A_TO_Z.md  ZEDDA_PLAN_MISSING_ITEMS.md  alerts.json  alerts_100.json  build.sh  debug_import.py  fetch.py  perf_test.csv  profile_test.csv  pyproject.toml  run_info.json  test_import.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  codeql-config.yml  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/setup-zedda/: action.yml
.github/workflows/: _reusable-build.yml  _reusable-quality.yml  _reusable-tests.yml  build_wheels.yml  ci.yml  codeql.yml  dependency-review.yml  docker.yml  docker_publish.yml  fuzz.yml  nightly.yml  release-drafter.yml  release.yml  sanitizers.yml  scorecard.yml  security.yml  stale.yml  tests.yml
benchmarks/: bench_main.cpp
conda-recipe/: meta.yaml
docs/: API.md  ARCHITECTURE.md  GETTING_STARTED.md  GUIDE.md
examples/: titanic_quickstart.ipynb
include/fasteda/: profile_builder.hpp  profile_result.hpp  stream_reader.hpp
include/zedda/: arrow_profiler.hpp  column_accumulator.hpp  correlation_engine.hpp  hyperloglog.hpp  mmap_reader.hpp  parsing_utils.hpp  profile_builder.hpp  profile_result.hpp  simd_scanner.hpp  stream_reader.hpp
python/fasteda/: __init__.py  cli.py  fasteda_core.pyd
python/zedda/: __init__.py  _ask.py  _clean.py  _compare.py  _constants.py  _fix.py  _format.py  _merge.py  _ml_ready.py  _resolve.py  _scan.py  _warnings.py  ai_insights.py  cli.py  report.py
src/bindings/: bindings.cpp
src/core/: arrow_profiler.cpp  mmap_reader.cpp  profile_builder.cpp  simd_scanner.cpp  stream_reader.cpp
tests/: test_ask_patterns.py  test_hotfix_0_4_5.py  test_phase3.py
tests/cpp/: test_arrow_profiler.cpp  test_day1.cpp  test_debug_crash.cpp  test_fast_float_parity.cpp  test_hyperloglog.cpp  test_mmap_reader.cpp  test_profile_builder.cpp  test_simd_scanner.cpp  test_stream_reader.cpp
tests/fuzz/: fuzz_csv_parser.cpp
tests/python/: debug_import.py  test_ask_dataframe.py  test_audit_regression.py  test_cli_smoke.py  test_compare.py  test_csv_property.py  test_dataframe_input.py  test_extracted_modules.py  test_fasteda.py  test_import.py  test_intelligence.py  test_merge.py  test_ml_ready.py  test_optional_pyarrow.py  test_parquet.py  test_report.py  test_resolve_module.py  test_scan_module.py  test_warnings.py
