[build-system]
requires = [
    "scikit-build-core>=0.9",
    "nanobind>=2.0",
    "cmake>=3.21",
    "ninja",
]
build-backend = "scikit_build_core.build"

# ── Project metadata ─────────────────────────────────────────────
[project]
name = "zedda"
dynamic = ["version"]  # SEC-PKG01: version read from python/zedda/__init__.py
description = "Zero Effort Data Analysis — 1TB files in seconds, C++ parallel core"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Zedda-Labs", email = "zeddalabs@gmail.com" }
]
maintainers = [
    { name = "Zedda-Labs", email = "zeddalabs@gmail.com" }
]
requires-python = ">=3.9"
keywords = [
    "eda", "data-science", "profiling", "csv", "parquet",
    "pandas", "fast", "cli", "analysis", "sampling", "arrow"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
        "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "rich>=13.0,<20",
    "typer>=0.12,<2.0",
    "pyarrow>=14.0.1,<25",  # SEC-D02: minimum 14.0.1 patches CVE-2023-47248
]

[project.optional-dependencies]
ai  = ["openai>=1.0"]
dev = ["pytest>=8.0", "pandas>=2.0", "numpy>=1.24", "polars>=0.20"]

[project.scripts]
zedda = "zedda.cli:app"

[project.urls]
Homepage   = "https://github.com/Zedda-Labs/Zedda"
Repository = "https://github.com/Zedda-Labs/Zedda"
Issues     = "https://github.com/Zedda-Labs/Zedda/issues"

# ── scikit-build-core ────────────────────────────────────────────
[tool.scikit-build]
cmake.build-type    = "Release"
cmake.source-dir    = "."
wheel.packages      = ["python/zedda"]
wheel.install-dir   = "zedda"
build-dir           = "build/{wheel_tag}"

# SEC-PKG01: Single-source version from __init__.py
[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "python/zedda/__init__.py"

sdist.exclude       = [
    "*.exe", "*.pyd", "*.dll",
    "build/", "wheelhouse/",
    "tests/cpp/", "benchmarks/",
    "*.csv", "*.txt",
    "debug_import.py", "test_import.py",
]
sdist.include       = [
    "extern/nanobind/**/*",
    "include/**/*",
    "src/**/*",
]

[tool.scikit-build.cmake.define]
FETCHCONTENT_UPDATES_DISCONNECTED = "ON"

# ── cibuildwheel ─────────────────────────────────────────────────
# nanobind uses C++17 aligned-deallocation which requires macOS 10.14+.
# Setting this here ensures cibuildwheel passes it to every inner
# virtualenv it creates, overriding the default of 10.9 / 11.0.
[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "10.14" }

# ── pytest ───────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
