[build-system]
requires = [
    "scikit-build-core>=0.9",
    "nanobind>=2.0",
    "cmake>=3.21",
    "ninja",
]
build-backend = "scikit_build_core.build"

# ── Project metadata ─────────────────────────────────────────────
[project]
name = "zedda"
dynamic = ["version"]  # SEC-PKG01: version read from python/zedda/__init__.py
description = "Zero Effort Data Analysis — 1TB files in seconds, C++ parallel core"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Zedda-Labs", email = "zeddalabs@gmail.com" }
]
maintainers = [
    { name = "Zedda-Labs", email = "zeddalabs@gmail.com" }
]
requires-python = ">=3.9,<3.15"
keywords = [
    "eda", "data-science", "profiling", "csv", "parquet",
    "pandas", "fast", "cli", "analysis", "sampling", "arrow"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "rich>=13.0,<20",
    "typer>=0.12,<2.0",
]

[project.optional-dependencies]
# SEC-D02: pyarrow>=14.0.1 patches CVE-2023-47248; kept OPTIONAL so users without
# Parquet files never need a C++ build. On Windows ARM64, pyarrow has no prebuilt
# wheel so we cannot make it mandatory without breaking that platform.
parquet = ["pyarrow>=14.0.1,<27"]
# FIX D-1: `requests` is imported by _ask_zedda_ai but was never declared.
# FIX D-2: `openai` was declared but unused — replaced with `requests`.
ai      = ["requests>=2.31,<3.0"]
clean   = ["thefuzz>=0.22"]
# FIX M-22: include lint/type/CI tools in [dev] so contributors get them
# via `pip install -e ".[dev]"`.
# FIX Batch 44: Add pytest-cov for coverage measurement.
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pandas>=2.0,<4.0",
    "numpy>=1.24,<3.0",
    "polars>=0.20,<2.0",
    "ruff>=0.9,<0.16",
    "mypy>=1.10",
    "types-requests>=2.31",
    "pre-commit>=3.7",
    "cibuildwheel>=2.20",
]

[project.scripts]
zedda = "zedda.cli:app"

[project.urls]
Homepage      = "https://github.com/Zedda-Labs/Zedda"
Repository    = "https://github.com/Zedda-Labs/Zedda"
Documentation = "https://github.com/Zedda-Labs/Zedda/blob/main/docs/API.md"
Changelog     = "https://github.com/Zedda-Labs/Zedda/releases"
Issues        = "https://github.com/Zedda-Labs/Zedda/issues"

# ── scikit-build-core ────────────────────────────────────────────
[tool.scikit-build]
cmake.build-type    = "Release"
cmake.source-dir    = "."
wheel.packages      = ["python/zedda"]
wheel.install-dir   = "zedda"
build-dir           = "build/{wheel_tag}"

sdist.exclude       = [
    "*.exe", "*.pyd", "*.dll",
    "build/", "wheelhouse/",
    "tests/cpp/", "benchmarks/",
    "*.csv", "*.txt",
    "debug_import.py", "test_import.py",
    "venv_*/", ".venv/",
]
sdist.include       = [
    "extern/nanobind/**/*",
    "include/**/*",
    "src/**/*",
]

# SEC-PKG01: Single-source version from __init__.py
[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "python/zedda/__init__.py"

[tool.scikit-build.cmake.define]
FETCHCONTENT_UPDATES_DISCONNECTED = "ON"

# ── cibuildwheel ─────────────────────────────────────────────────
# nanobind uses C++17 aligned-deallocation which requires macOS 10.14+.
# Setting this here ensures cibuildwheel passes it to every inner
# virtualenv it creates, overriding the default of 10.9 / 11.0.
[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "10.14" }

# ── pytest ───────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--tb=short -q"

# ── ruff (linter + formatter) ───────────────────────────────────
[tool.ruff]
target-version = "py39"
line-length = 88
exclude = ["extern"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort (import ordering)
    "UP",   # pyupgrade (modernize syntax)
    "B",    # flake8-bugbear (common pitfalls)
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit (security checks)
]
ignore = [
    "E501",  # line too long — handled by formatter
    "F401", "B904", "SIM115", "E402", "F841", "SIM102", "SIM108", "B007", "E731", "I001", "SIM105", "W292", "B008",
    "S101",  # assert used in tests and runtime validation — intentional
    "S105",  # PASS/FAIL variables in tests flagged as hardcoded passwords
    "S110",  # try-except-pass is common in test teardown logic
    "S311",  # random module is perfectly safe for non-cryptographic test data generation
    "S603",  # subprocess call with shell=False — CLI intentional usage
    "S607",  # partial executable path — CLI intentional usage
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── mypy (type checker) ─────────────────────────────────────────
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true  # Required: fasteda_core C++ extension has no stubs
